# eyeVesa-community

./: .dockerignore  .gitignore  AGENTS.md  AGENT_INSTALL.md  CHANGELOG.md  GEMINI.md  LEARNING_ROADMAP.md  LICENSE  README.md  audit.md  cli-docs.md  cloudbuild.yaml  community-test.py  dev-op-requirements.md  docker-compose.yml  eyeVesa-merchant-manual.md  eyeVesa-tui.md  eyeVesa.md  humantask.md  integration.md  market-research.md  monetize.md  plan.md  session-ses_1c41.md  session-ses_1c5e.md  session-ses_1c63.md  session-ses_1c66.md  session-ses_1d1f.md  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  security-alert-delivery-test.yml  security-critical-failure-auto-issue.yml  security-phase-1.yml  security-phase-3-container-scan.yml  security-phase-4-post-deploy-smoke.yml  security-phase-5-alerting.yml  security-weekly-digest.yml
Formula/: eyevesa.rb
adapter/resource-adapter-go/: Dockerfile  go.mod
chaos/: go.mod  main.go
cli/: Dockerfile  go.mod  go.sum  main.go
cli/cmd/: agents.go  airport.go  api_keys.go  audit.go  authorize.go  budget.go  config.go  connect.go  delegate.go  discover.go  doctor.go  federation.go  hitl.go  init.go  keys.go  mcp.go  ptv.go  push.go  quickstart.go  ready.go  resources.go  root.go  root.go.bak  skill.go  spire.go  tenants.go  tui.go  tx.go  update.go  verify.go
deploy/: docker-compose.prod.yml
deploy/caddy/: Caddyfile
deploy/k8s/: deployment.yaml  spire-sidecar.yaml
deploy/scripts/: .env.gcp  deploy-gcp.sh  deploy-vps.sh
deploy/terraform/: .terraform.lock.hcl  backend.gcs.example  env.gcp.example  gcp.tf  main.tf  terraform.tfstate  terraform.tfstate.1779156069.backup  terraform.tfstate.backup  terraform.tfvars
docs/: ENTERPRISE_SETUP_GUIDE.md  HERMES_SETUP_GUIDE.md  HOW_TO_USE.md  README.md  USER_MANUAL.md  VPS_DEPLOY_GUIDE.md  agent-native-install.md  astro.config.mjs  beginner-guide.md  community-release-workflow.md  community-secure-agent-node.md  features-airport.md  federation-local-agent-setup.md  package-lock.json  package.json
docs/incident/: security-branch-protection.md  security-harness-runbook.md
docs/integrations/: claude-computer-use.md  framework-integration-kit.md  hermes-shopping.md  openai-computer-use.md
examples/: README.md
examples/langchain/: 01_audited_agent.py
examples/python/: 01_basic_identity.py
gateway/control-plane/: .dockerignore  .golangci.yml  Dockerfile  go.mod  go.sum
gateway/core/: .dockerignore  Cargo.toml  Dockerfile  build.rs  deny.toml
gateway/core/src/: grpc.rs  lib.rs  main.rs
gateway/core/src/crypto/: identity.rs  mod.rs  signing.rs
gateway/core/src/identity/: mod.rs  ptv.rs  svid.rs
gateway/core/src/proxy/: agent_handler.rs  forward.rs  mcp_handler.rs  mod.rs  server.rs
gateway/core/src/tls/: mod.rs  server.rs  watcher.rs
gateway/core/tests/: agent_handler_test.rs  crypto_test.rs  forward_test.rs  mcp_handler_test.rs  server_test.rs  tls_test.rs
gateway/spire/: agent.conf  server.conf
proto/: agentid.proto
proto/agentid/: agentid.pb.go  agentid_grpc.pb.go  go.mod
registry/migrations/: 001_agents.sql  002_resources.sql  003_delegations.sql  004_audit_logs.sql  005_trust_and_hitl.sql  006_identity_bindings.sql  007_hitl_escalation.sql  008_tenants_approvers.sql  009_behavioral_embeddings.sql  010_llm_integration.sql  011_budget_metering.sql  012_push_tokens.sql  013_api_keys.sql  014_spire_federation.sql  015_skills.sql  016_transaction_tokens.sql  017_airport.sql  018_federation.sql  019_federation_endpoint_unique.sql  020_federation_peer_type.sql  021_system_metadata.sql  022_api_key_hash_and_tenant_text.sql  023_merchant_trust.sql  024_federated_merchant_trust.sql  025_relax_federated_merchant_trust_fk.sql  026_add_on_delete_cascade_to_audit_logs.sql  026_community_federation_invites.sql  027_add_on_delete_cascade_to_trust_events.sql  028_remove_plaintext_api_keys.sql  029_make_audit_logs_immutable.sql
scripts/: build_release.sh  connect-airport.py  install.sh  repair-update.sh  reset-local.sh  smoke-test.sh
sdk/agent-sdk-python/: README.md  pyproject.toml
sdk/agent-sdk-python/examples/: hermes_airport.py
sdk/agent-sdk-python/src/agentid_sdk/: __init__.py  client.py  exceptions.py  integrations.py  models.py
sdk/agent-sdk-python/tests/: test_models.py
sdk/agent-sdk-rust/: Cargo.toml
sdk/agent-sdk-rust/examples/: demo.rs
sdk/agent-sdk-rust/src/: airport.rs  client.rs  connect.rs  delegate.rs  discover.rs  hitl.rs  integrations.rs  invoke.rs  lib.rs  mcp.rs  ptv.rs  skills.rs  verify.rs
sdk/agent-sdk-rust/tests/: sdk_test.rs
site/: index.html  llm.txt  script.js  styles.css
soak-test-logs/: memory-20260522-005155.csv  memory-20260522-100411.csv
tests/: e2e-test.sh  load-test.js  load-test.sh  memory-leak-watch.sh  tls-test.sh
(+152 files in other folders)
