[package]
name = "agentid-core"
version = "0.1.0"
edition = "2021"
description = "AgentID Gateway core proxy engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"