[package]
name = "agentid-core"
version = "0.1.0"
edition = "2021"
description = "AgentID Gateway core proxy engine"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.14"
prost-types = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3"
tempfile = "3"
rcgen = "0.13"

[build-dependencies]
tonic-build = "0.12"