[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentid-sdk"
version = "0.1.0"
description = "AgentID SDK for AI agents to connect to the AgentID Gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "PyNaCl>=1.5",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.80"]
autogen = ["autogen-agentchat>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"