[package]
name = "agentid-sdk"
version = "0.1.0"
edition = "2021"
description = "AgentID SDK for AI agents to connect to the AgentID Gateway"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1"