[package]
name = "agentid-sdk"
version = "0.1.0"
edition = "2021"
description = "AgentID SDK for AI agents to connect to the AgentID Gateway"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rand = "0.8"